are logically unified to Rings.divide in syntactic type class
Rings.divide, with infix syntax (_ div _).  Infix syntax (_ / _)
for field division is added later as abbreviation in class Fields.inverse.
INCOMPATIBILITY,  instantiations must refer to Rings.divide rather
than the former separate constants, hence infix syntax (_ / _) is usually
not available during instantiation.

* Library/Multiset:
  - Renamed multiset inclusion operators:
      < ~> <#
      \<subset> ~> \<subset>#
      <= ~> <=#
      \<le> ~> \<le>#
      \<subseteq> ~> \<subseteq>#
    INCOMPATIBILITY.
  - "'a multiset" is no longer an instance of the "order",
    "ordered_ab_semigroup_add_imp_le", "ordered_cancel_comm_monoid_diff",
    "semilattice_inf", and "semilattice_sup" type classes. The theorems
    previously provided by these type classes (directly or indirectly)
    are now available through the "subset_mset" interpretation
    (e.g. add_mono ~> subset_mset.add_mono).
    INCOMPATIBILITY.
  - Renamed conversions:
      multiset_of ~> mset
      multiset_of_set ~> mset_set
      set_of ~> set_mset
    INCOMPATIBILITY
  - Renamed lemmas:
      mset_le_def ~> subseteq_mset_def
      mset_less_def ~> subset_mset_def
      less_eq_multiset.rep_eq ~> subseteq_mset_def
    INCOMPATIBILITY
  - Removed lemmas generated by lift_definition:
    less_eq_multiset.abs_eq, less_eq_multiset.rsp less_eq_multiset.transfer
    less_eq_multiset_def
    INCOMPATIBILITY

* Multivariate_Analysis/Cauchy_Integral_Thm: Complex path integrals, Cauchy's
integral theorem, winding numbers and Cauchy's integral formula, ported from HOL Light

* Multivariate_Analysis: Added topological concepts such as connected components
and the inside or outside of a set.

* Theory Library/Old_Recdef: discontinued obsolete 'defer_recdef'
command. Minor INCOMPATIBILITY, use 'function' instead.

* Recursive function definitions ('fun', 'function', 'partial_function')
no longer expose the low-level "_def" facts of the internal